<resources>
    <string name="app_name">Dictionary App</string>
    <string name="add_word">Add word</string>
    <string name="keyword">Keyword:</string>
    <string name="translation">Translation:</string>
    <string name="enter_keyword">Enter a keyword</string>
    <string name="enter_translation">Enter a translation</string>
    <string name="add">Add</string>
    <string name="input_error">I/O error</string>
</resources>